[project]
name = "nonebot-plugin-wakatime"
version = "0.1.9"
description = "将代码统计嵌入 Bot 中"
authors = [
    {name = "KomoriDev", email = "mute231010@gmail.com"},
]
dependencies = [
    "nonebot2>=2.3.2",
    "nonebot-plugin-alconna>=0.49.0",
    "nonebot-plugin-orm>=0.7.4",
    "nonebot-plugin-session>=0.3.1",
    "nonebot-plugin-htmlrender>=0.3.3",
    "nonebot-plugin-user>=0.3.0",
    "nonebot-plugin-localstore>=0.7.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
adapters = [
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-adapter-telegram>=0.1.0b17",
]
tests = [
    "viztracer>=0.16.3",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "nonebug>=0.3.7",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "nb-cli>=1.4.1",
    "cryptography>=43.0.0",
]
extra = [
    "nonebot2[fastapi]>=2.3.2",
    "nonebot-plugin-orm[aiosqlite]>=0.7.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_wakatime"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest --cov=nonebot_plugin_wakatime --cov-report xml -n auto"
test_single = "pytest --cov=nonebot_plugin_wakatime --cov-report xml"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.2",
    "black>=24.4.2",
    "isort>=5.13.2",
    "pre-commit>=3.7.1",
]

[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 90
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
